[gd_scene load_steps=2 format=3 uid="uid://c0osjfmyq442s"]

[ext_resource type="Script" path="res://multiplayerScene.gd" id="1_hfyt4"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 480.0
offset_bottom = 272.0
script = ExtResource("1_hfyt4")

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 160.0
offset_top = 80.0
offset_right = 280.0
offset_bottom = 111.0
text = "Host"

[node name="Join" type="Button" parent="."]
layout_mode = 0
offset_left = 160.0
offset_top = 120.0
offset_right = 280.0
offset_bottom = 151.0
text = "Join"

[node name="StartGame" type="Button" parent="."]
layout_mode = 0
offset_left = 160.0
offset_top = 160.0
offset_right = 280.0
offset_bottom = 191.0
text = "Start Game"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 160.0
offset_top = 24.0
offset_right = 320.0
offset_bottom = 55.0

[node name="Label" type="Label" parent="LineEdit"]
layout_mode = 0
offset_left = -56.0
offset_right = -5.0
offset_bottom = 23.0
text = "Name:"

[connection signal="button_down" from="Host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="Join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="StartGame" to="." method="_on_start_game_button_down"]
